Regenerate the list of EPSG codes supported by Apache SIS.